trunk/Archive2/d0/85de6b33199996/output
main.cpp:15:37: error: invalid suffix on literal; C++11 requires a space between literal and identifier [-Wreserved-user-defined-literal]
    authors[ "JLBorges" ].insert( ""The Garden of Forking Paths" ) ;
                                    ^
                                     
main.cpp:15:37: error: expected ')'
main.cpp:15:33: note: to match this '('
    authors[ "JLBorges" ].insert( ""The Garden of Forking Paths" ) ;
                                ^
main.cpp:15:64: error: missing terminating '"' character [-Werror,-Winvalid-pp-token]
    authors[ "JLBorges" ].insert( ""The Garden of Forking Paths" ) ;
                                                               ^
3 errors generated.
